# viewtools

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml  release.yml  test.yml
docs/: api.md  cli.md  conf.py  examples.md  quickstart.md
scripts/: build_docs.py
tests/integration/: test_integration.py
tests/unit/: test_api.py  test_cli.py  test_core.py
viewtools/: __init__.py  _logging.py  _version.py
viewtools/api/: __init__.py  rearrange_genome.py
viewtools/cli/: __init__.py  rearrange_genome.py
viewtools/core/: utils.py
