[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "viewtools"
description = "Tools for working with genomic intervals and sequences"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click",
    "pandas",
    "biopython",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "pre-commit",
]

[project.scripts]
viewtools = "viewtools.cli.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/viewtools"
Repository = "https://github.com/yourusername/viewtools"
Issues = "https://github.com/yourusername/viewtools/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["viewtools*"]

[tool.setuptools_scm]
write_to = "viewtools/_version.py"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-config",
    "--strict-markers",
]
